--- a/Inhalt/04_Inhalt/fazit.tex
+++ b/Inhalt/04_Inhalt/fazit.tex
@@ -1,14 +1,19 @@
 \chapter{Fazit}
 
-Schlussendlich kann gesagt werden, dass Transformer-Architekturen die Landschaft des maschinellen Lernens, insbesondere im Bereich der Textverarbeitung, revolutioniert haben. 
+Transformer-Architekturen haben die Landschaft des maschinellen Lernens, insbesondere im Bereich der Textverarbeitung, revolutioniert. 
 Durch den Einsatz von Self-Attention-Mechanismen und Multi-Head-Attention-Schichten können Transformer den Kontext von Tokens effizienter und umfassender erfassen als frühere Architekturen wie RNNs. 
-Die Möglichkeit, Informationen parallel zu verarbeiten, erlaubt es Transformer-Modellen, große Textmengen schneller und genauer zu analysieren.
+Die Parallelverarbeitung ermöglicht es diesen Modellen, große Textmengen nicht nur schneller, sondern auch mit einer höheren Genauigkeit zu analysieren.
 
-Die Einführung von Positional Encodings stellt sicher, dass die Reihenfolge der Eingabetokens korrekt berücksichtigt wird, während die Feed-Forward-Schichten komplexe nicht-lineare Zusammenhänge modellieren können. 
-Der Encoder-Decoder-Aufbau ermöglicht zudem vielseitige Einsatzmöglichkeiten, von maschineller Übersetzung bis hin zur Textgenerierung.
+Das Ziel dieser Arbeit war es, die grundlegenden Konzepte der Transformer-Architektur im Kontext der Textverarbeitung einem Leser ohne umfangreiches Vorwissen zugänglich zu machen. 
+Dieses Ziel wurde durch eine systematische und praxisnahe Darstellung der Schlüsselkomponenten wie Scaled Dot-Product Attention, Multi-Head Attention, Positional Encodings und der Feed-Forward-Schichten erreicht. 
+Die detaillierte Beschreibung des Encoder-Decoder-Aufbaus verdeutlichte die Flexibilität der Architektur, Texte sowohl zu analysieren als auch zu generieren.
 
-Insgesamt zeigt sich, dass Transformer-Architekturen nicht nur ein technologischer Fortschritt sind, sondern auch eine Grundlage für zahlreiche moderne Anwendungen darstellen. 
-Modelle wie BERT, GPT und T5 haben ihre Leistungsfähigkeit bereits eindrucksvoll unter Beweis gestellt und werden die Entwicklung weiterer KI-Systeme maßgeblich prägen.
+Darüber hinaus wurde anhand eines Beispiels die Funktionsweise des Attention-Mechanismus veranschaulicht, um die theoretischen Konzepte für den Leser greifbar zu machen. 
+Die Analyse hat aufgezeigt, wie Transformer-Modelle den Kontext eines Textes erschließen, um übereinstimmende Tokens effizient zu gewichten und damit eine bessere semantische Analyse zu ermöglichen.
 
-Abschließend lässt sich festhalten, dass das Verständnis der Transformer-Architektur nicht nur für die Forschung, sondern auch für die praktische Anwendung von großer Bedeutung ist. 
-Weitere Optimierungen und Anpassungen werden in Zukunft zweifellos neue Meilensteine in der KI-Entwicklung setzen.
+Besonders der Encoder-Decoder-Aufbau stellt eine zentrale Innovation dar. 
+Der Encoder abstrahiert die Eingabetokens, indem er semantische und syntaktische Zusammenhänge lernt, während der Decoder diese abstrahierten Repräsentationen nutzt, um präzise und kontextuell passende Ausgaben zu erzeugen. 
+Diese Trennung der Aufgaben erlaubt es, Text nicht nur zu klassifizieren, sondern auch generative Aufgaben wie maschinelle Übersetzung oder Textzusammenfassungen effizient umzusetzen.
+
+Zusammenfassend hat diese Arbeit die Grundlagen der Transformer-Architektur erfolgreich vermittelt und damit das Verständnis der technologischen Fortschritte in der Textverarbeitung vertieft.
+
