--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -65,6 +65,7 @@
 %\include{Inhalt/01_Standard/sperrvermerk}
 %\include{Inhalt/02_Abstract/abstract-en}
 %\include{Inhalt/02_Abstract/abstract-de}
+\include{Inhalt/04_Inhalt/disclaimer}
 
 % ------ Inhaltsverzeichnis
 \singlespacing
