--- a/Inhalt/04_Inhalt/attention.tex
+++ b/Inhalt/04_Inhalt/attention.tex
@@ -128,7 +128,7 @@ Insgesamt sieht das Verfahren folgendermaßen aus:
 \]
 
 Diese Berechnung wurde auch auf das das begleitende Beispiel angewendet.
-Wenn die Beziehungen zwischen den Token in einer Heatmap visualisiert werden, lässt sich so z.B. erkennen, dass das Model einen hohen Zusammenhang zwischen \enquote{s}, \enquote{#itze} und \enquote{Bank} erkannt hat (siehe \ref{fig:heatmap}). 
+Wenn die Beziehungen zwischen den Token in einer Heatmap visualisiert werden, lässt sich so z.B. erkennen, dass das Model einen hohen Zusammenhang zwischen \enquote{s}, \enquote{#itze} und \enquote{Bank} erkannt hat (siehe Abb. \ref{fig:heatmap}). 
 So kann aus dem Kontext erschlossen werden, dass es sich bei Sitzen und Bank wahrschlich um eine Sitzbank handelt und nicht um das Finanzinstitut.
 
 \begin{figure}[ht]
