--- a/Inhalt/04_Inhalt/grundlagen.tex
+++ b/Inhalt/04_Inhalt/grundlagen.tex
@@ -21,7 +21,7 @@ Um den Sinn eines Satzes zu verstehen, muss der Inhalt schrittweise verarbeitet 
 
 \section{Neuronale Netze für Textverarbeitung}
 
-Für Textanalysen, Übersetzungen oder Zusammenfassungen wurden lange Zeit Recurrent Neural Networks (RNNs) verwendet (siehe Abb. \fig{ref:rnn}).  
+Für Textanalysen, Übersetzungen oder Zusammenfassungen wurden lange Zeit Recurrent Neural Networks (RNNs) verwendet (siehe Abb. \ref{fig:rnn}).  
 RNNs analysieren einen Text sequentiell und verknüpfen jedes Wort mit dem Kontext aus dem vorhergehenden Wort (vgl. \cite[S. 2]{attention}).
 
 
